--- a/dist.ini
+++ b/dist.ini
@@ -21,8 +21,9 @@ Exporter=0
 Log::Any::IfLOG=0.07
 Mojo::DOM=0
 Mojo::UserAgent=0
-Parse::Number::ID=0.06
+Parse::Number::EN=0
 
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used "spec"
 Rinci=1.1.0
+
