[dist] Moving spec prereq from DevelopRecommends to DevelopSuggests with _SPEC:: prefix

--- a/dist.ini
+++ b/dist.ini
@@ -23,7 +23,5 @@ Mojo::DOM=0
 Mojo::UserAgent=0
 Parse::Number::EN=0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used "spec"
-Rinci=1.1.0
-
+[Prereqs / DevelopSuggests]
+_SPEC::Rinci=1.1.0
