--- a/dist.ini
+++ b/dist.ini
@@ -23,5 +23,7 @@ Mojo::DOM=0
 Mojo::UserAgent=0
 Parse::Number::EN=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.0
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.0
