--- a/dist.ini
+++ b/dist.ini
@@ -18,7 +18,7 @@ perl=5.010001
 strict=0
 warnings=0
 Exporter=0
-Log::Any::IfLOG=0.07
+Log::ger=0.011
 Mojo::DOM=0
 Mojo::UserAgent=0
 Parse::Number::EN=0
@@ -27,3 +27,4 @@ Parse::Number::EN=0
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.0
+
