Extract last update information from the website

--- a/dist.ini
+++ b/dist.ini
@@ -17,11 +17,13 @@ Test::More=0.98
 perl=5.010001
 strict=0
 warnings=0
-Exporter=0
-Log::ger=0.011
+Exporter=5.57
+Log::ger=0.023
 Mojo::DOM=0
 Mojo::UserAgent=0
+Parse::Date::Month::ID=0
 Parse::Number::EN=0
+Time::Local=0
 
 [Prereqs / DevelopX_spec]
 -phase=develop
