--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,8 @@ perl=5.010001
 strict=0
 warnings=0
 Exporter=5.57
+;!lint_prereqs assume-used undetected
+IO::Socket::SSL=2.009
 Log::ger=0.023
 Mojo::DOM=0
 Mojo::UserAgent=0
